syntax = "proto3";

package spawn_diff;

import "proto/spawn.proto";

message SpawnDiff {
  string primary_output = 1;
  string target = 2;
  string mnemonic = 3;
  map<string, uint32> transitively_invalidated = 4;

  enum DiffType {
    OLD_ONLY = 0;
    NEW_ONLY = 1;
    MODIFIED = 2;
  }
  DiffType diff_type = 5;

  repeated Diff diffs = 6;
}


message Diff {
  oneof diff {
    StringSetDiff tool_paths = 1;
    FileSetDiff tool_contents = 2;
    StringSetDiff input_paths = 3;
    FileSetDiff input_contents = 4;
    DictDiff env = 5;
    ListDiff args = 6;
    StringSetDiff param_file_paths = 7;
    FileSetDiff param_file_contents = 8;
    StringSetDiff output_paths = 9;
    FileSetDiff output_contents = 10;
  }
}

message ListDiff {
  repeated string old = 1;
  repeated string new = 2;
}

message DictDiff {
  map<string, string> old_changed = 1;
  map<string, string> new_changed = 2;
}

message StringSetDiff {
  repeated string old_only = 1;
  repeated string new_only = 2;
}

message FileSetDiff {
  repeated FileDiff file_diffs = 1;
}

message FileDiff {
  string path = 1;
  oneof old {
    string old_digest = 2;
    string old_target_path = 3;
  }
  oneof new {
    string new_digest = 4;
    string new_target_path = 5;
  }
}
